# red_alert

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: reviewer.md  test-writer.md
.claude/hooks/: auto-lint.sh  block-dangerous-commands.sh  check-complexity.sh  check-types.sh  quality-gate.sh  session-start.sh
.claude/rules/: coding-standards.md  protected-files.md
.claude/skills/code-review/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/data-explore/: SKILL.md
.claude/skills/testing/: SKILL.md
backend/: __main__.py  cli.py  config.py  database.py  db_compat.py  main.py
backend/api/: acled.py  acled_analytics.py  acled_filters.py  alerts.py  analytics.py  filters.py  locations.py
backend/ingestion/: acled_client.py  acled_constants.py  acled_csv_loader.py  csv_loader.py  deduplication.py  locations_loader.py  oref_client.py  tzofar_client.py  utils.py
backend/models/: __init__.py  acled_event.py  alert.py  category.py  location.py  sync_state.py
backend/schemas/: acled.py  alert.py
docs/design/: architecture.md
docs/research/: acled-integration-design.md  alternative-data-sources.md  dataviz-stack-decision.md  middle-east-alert-datasets.md  oref-api-endpoints.md  repo-security-review.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/.git-backup/: index
frontend/.git-backup/refs/heads/: main
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: acledClient.ts  client.ts
frontend/src/api/__tests__/: client.test.ts
frontend/src/components/charts/: AlertTimeline.tsx  AnomalyDetection.tsx  BestWeekdays.tsx  CategoryBreakdown.tsx  ChartPanel.tsx  HourlyHeatmap.tsx  KpiCards.tsx  LocationRanking.tsx  PeriodComparison.tsx  PrealertCorrelation.tsx  QuietStreaks.tsx  SleepScore.tsx
frontend/src/components/charts/__tests__/: PeriodComparison.test.tsx
frontend/src/components/conflicts/: ActorIntelligence.tsx  ActorSearch.tsx  CivilianDashboard.tsx  CivilianImpact.tsx  ConflictAnomalies.tsx  ConflictByCountry.tsx  ConflictByTheater.tsx  ConflictByType.tsx  ConflictEscalation.tsx  ConflictKpiCards.tsx  ConflictMap.tsx  ConflictSidebar.tsx  CountryIntelligence.tsx  EscalationWarning.tsx  ForceAnalysis.tsx  SituationHeader.tsx  TheaterCards.tsx  TheaterTimeline.tsx
frontend/src/components/drilldown/: DrillDownPanel.tsx  RegionBreadcrumb.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/map/: AlertMap.tsx  MapControls.tsx  PlaybackControls.tsx
frontend/src/hooks/: useAcledData.ts  useApiData.ts  usePlayback.ts
frontend/src/lib/: chart-theme.ts  export.ts  labels.ts
frontend/src/lib/__tests__/: chart-theme.test.ts  export.test.ts  labels.test.ts
frontend/src/pages/: ConflictsPage.tsx  DashboardPage.tsx
frontend/src/store/: acledFilters.ts  filters.ts  locale.ts  playback.ts  theme.ts
frontend/src/store/__tests__/: filters.test.ts  locale.test.ts  playback.test.ts  theme.test.ts
tests/: conftest.py  test_acled_analytics.py  test_acled_api.py  test_acled_client.py  test_acled_csv_loader.py  test_acled_filters.py  test_acled_models.py  test_api.py  test_bulk_load.py  test_cleanup.py  test_cli.py  test_csv_loader.py  test_db_compat.py  test_deduplication.py  test_filters.py  test_geo_endpoints.py  test_lifespan.py  test_lifestyle_analytics.py  test_locations_and_zone_filter.py  test_models.py  test_oref_client.py  test_phase5_analytics.py  test_response_models.py  test_tzofar_client.py
