[project]
name = "red-alert"
version = "0.1.0"
description = "Analytics dashboard for Israel's OREF alert history"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "radon>=6.0.0",
    "mypy>=1.13.0",
    "vulture>=2.14",
    "complexipy>=0.5.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "S",     # flake8-bandit (security)
    "B",     # flake8-bugbear (common bugs)
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RET",   # flake8-return
    "PERF",  # perflint (performance)
    "T20",   # flake8-print (no prints in prod)
    "ERA",   # eradicate (commented-out code)
    "PL",    # pylint rules subset
    "RUF",   # ruff-specific rules
    "N",     # pep8-naming
    "ANN",   # flake8-annotations (type annotations)
    "ASYNC", # async-specific rules
    "DTZ",   # flake8-datetimez (timezone awareness)
    "A",     # flake8-builtins (no shadowing builtins)
    "C90",   # mccabe complexity
    "TCH",   # flake8-type-checking
    "FBT",   # flake8-boolean-trap
    "PTH",   # flake8-use-pathlib
]
ignore = [
    "RUF001",   # Ambiguous unicode — Hebrew text is intentional
    "RUF002",   # Ambiguous unicode in docstrings — Hebrew text
    "RUF003",   # Ambiguous unicode in comments — Hebrew text
    "B008",     # Function calls in defaults — required by FastAPI (Query, Depends)
    "PLR0913",  # Too many arguments — FastAPI endpoints use DI-style params
"ANN401",   # Dynamically typed expressions (Any) — sometimes necessary
    "FBT001",   # Boolean positional arg — too strict for FastAPI
    "FBT002",   # Boolean default value — too strict for FastAPI
    "TC002",    # Session import needed at runtime for FastAPI DI resolution
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert is fine in tests
    "ANN",     # type annotations not required in tests
    "PLR2004", # magic values fine in test assertions
    "ERA001",  # commented code sometimes useful in tests
    "T20",     # print statements OK in tests
]
"backend/cli.py" = [
    "S104",    # Binding to 0.0.0.0 is intentional for server CLI
    "T20",     # Print statements OK in CLI output
    "PLC0415", # Lazy imports OK in CLI (avoid loading heavy modules at startup)
]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.lint.pylint]
max-args = 8

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# --- Mypy Configuration ---
[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = false
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

# --- Coverage Configuration ---
[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/__main__.py",
    "backend/cli.py",
]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

# --- Vulture Configuration ---
[tool.vulture]
min_confidence = 80
paths = ["backend"]
